--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </title>
     <meta charset="ISO-8859-2" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <link rel="shortcut icon" href="m19705469.png" />
+    <link rel="shortcut icon" href="img/favicon.png" />
     <link
       rel="preload"
       as="font"
